@@ -2,6 +2,7 @@ This file shows the changes in this release of xPDO.
 
 xPDO 2.0.0-rc2 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- [#XPDO-52] Fix fatal error when xPDOManager::createObjectContainer() cannot prepare a PDOStatement
 - xPDO::log() and xPDO::$logTarget will now accept an ARRAY target with an option that is a reference to the var
 - xPDO::connect() should return false on Exception
 - Ensure driverOptions is set as an empty array if the value passed is not an array
